<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/ic_baseline_notes_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_margin="20dp"
        android:textColor="@color/appColorGreen"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/secularone_regular"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/labelCurrencyCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_calculator_text"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/appColorBlue"
        android:textStyle="bold"
        android:textSize="40sp"
        android:fontFamily="@font/patuaone_regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSignUp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFirstCurrency"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/labelCurrencyCalculator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin = "20dp"
        app:boxBackgroundMode="none"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_text_field"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:visibility="gone"
        android:id="@+id/textinput_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FA082C"
        android:layout_marginTop="-18dp"
        app:layout_constraintTop_toBottomOf="@id/textFieldFirstCurrency"
        app:layout_constraintLeft_toLeftOf="@id/textFieldFirstCurrency"
        android:text="@string/amount"
        />
    <TextView
        android:id="@+id/textFieldSecondCurrency"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/patuaone_regular"
        app:layout_constraintTop_toBottomOf="@id/textFieldFirstCurrency"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_text_field"
       />

    <LinearLayout
        android:id="@+id/layoutSelectCurrencyToConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/textFieldSecondCurrency"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:weightSum="5"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropDownFirstCurrency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/ic_baseline_sync_alt_24"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropDownSecondCurrency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
           android:layout_weight="2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/secularone_regular"
        android:text="@string/convert"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/layoutSelectCurrencyToConvert"
        android:background="@drawable/custom_button_field"
        />
    <TextView
        android:id="@+id/linkToViewCurrentExchangeRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        tools:text="@string/link_to_view_exchange_rate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convertButton"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintTop_toBottomOf="@id/linkToViewCurrentExchangeRate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/appColorBlue"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/L30days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/L90days"
                >
            <TextView
                android:id="@+id/txtPast30days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/past_30_days"
                />
               <androidx.cardview.widget.CardView
                   android:layout_width="10dp"
                   android:layout_height="10dp"
                   app:cardBackgroundColor="@color/appColorGreen"
                   app:cardCornerRadius="5dp"
                   />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/L90days"
                android:layout_marginTop="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/L30days"
                >
                <TextView
                    android:id="@+id/txtPast90days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/past_90_days"
             />
                <androidx.cardview.widget.CardView
                    android:id="@+id/dotPast90days"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    app:cardBackgroundColor="@color/appColorGreen"
                    app:cardCornerRadius="5dp"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>